--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
+spring.application.name=tracker-app
+spring.port=8080
 
 spring.liquibase.change-log=classpath:db/changelog/changelog.xml
 spring.liquibase.enabled=true
 
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/tracker
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+logging.level.root=DEBUG
+logging.level.org.springframework=DEBUG
 
