--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-logging.level.root=DEBUG
-logging.level.org.springframework=DEBUG
+logging.level.root=INFO
+logging.level.org.springframework=INFO
+logging.level.org.springframework.security=DEBUG
 
