--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 logging.level.root=INFO
 logging.level.org.springframework=INFO
-logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=trace
 
