--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.liquibase:liquibase-core'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'com.opencsv:opencsv:5.0'
 
 	compileOnly 'org.projectlombok:lombok:1.18.20'
 
