Upload logging done

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ group = 'com.app'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '18'
+	sourceCompatibility = JavaVersion.VERSION_18
+	targetCompatibility = JavaVersion.VERSION_18
 }
 
 repositories {
