--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.liquibase.enabled=true
 
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/tracker
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=admin
+spring.datasource.password=adminp@ss
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 logging.level.root=INFO
