--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group = 'com.app'
-version = '0.0.3-SNAPSHOT'
+version = '1.0.0'
 
 java {
 	sourceCompatibility = JavaVersion.VERSION_18
